Fix pre tag wrap

--- a/web/src/containers/QuestionnaireBuilder/QuestionnaireBuilder.module.scss
+++ b/web/src/containers/QuestionnaireBuilder/QuestionnaireBuilder.module.scss
@@ -30,6 +30,10 @@
     border-right: 1px solid rgba(5, 5, 5, 0.06);
     margin-right: 30px;
     padding-right: 30px;
+
+    pre {
+        white-space: pre-wrap;
+    }
 }
 
 .questionnaireForm {
